// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: NameForm should render correctly 1`] = `
<form>
  <Panel.Section>
    <Stack>
      <Field
        autoComplete="given-name"
        component={[Function]}
        id="firstName"
        label="First Name"
        name="firstName"
        validate={[Function]}
      />
      <Field
        autoComplete="family-name"
        component={[Function]}
        id="lastName"
        label="Last Name"
        name="lastName"
        validate={[Function]}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <Button
      submit={true}
      variant="secondary"
    >
      Update Profile
    </Button>
  </Panel.Section>
</form>
`;

exports[`Component: NameForm should render correctly when updating 1`] = `
<form>
  <Panel.Section>
    <Stack>
      <Field
        autoComplete="given-name"
        component={[Function]}
        id="firstName"
        label="First Name"
        name="firstName"
        validate={[Function]}
      />
      <Field
        autoComplete="family-name"
        component={[Function]}
        id="lastName"
        label="Last Name"
        name="lastName"
        validate={[Function]}
      />
    </Stack>
  </Panel.Section>
  <Panel.Section>
    <Button
      disabled={true}
      submit={true}
      variant="secondary"
    >
      Updating Profile
    </Button>
  </Panel.Section>
</form>
`;
